test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_loop_decl_init_none_array.plx
pub fn main(none) i32 {
    loop i: [2]none = $(nil, nil) while 1 .. i[0] = nil {
        return 1
    }
    return 0
}
